--- a/src/pages/blog/y-nghia-la-bai.astro
+++ b/src/pages/blog/y-nghia-la-bai.astro
@@ -123,7 +123,7 @@ const schema = {
               </a>
               
               <a href={`/y-nghia-la-bai/${post.slug}`} class="title-link">
-                <h3 class="section-subtitle">{post.data.title.replace("Ý nghĩa lá bài ", "")}</h3>
+                <h3 class="section-subtitle">{post.data.title}</h3>
               </a>
               
               <p class="section-text">{post.data.excerpt}</p>
