--- a/src/pages/y-nghia-la-bai/[slug].astro
+++ b/src/pages/y-nghia-la-bai/[slug].astro
@@ -173,7 +173,7 @@ const groupName = group.charAt(0).toUpperCase() + group.slice(1);
                 </div>
               </div>
             )}
-            <a href="/y-nghia-la-bai" class="btn-outline" style="margin-top: 3rem;">&larr; Quay lại danh sách</a>
+            <a href="/blog/y-nghia-la-bai" class="btn-outline" style="margin-top: 3rem;">&larr; Quay lại danh sách</a>
           </article>
 
         </div> </div>
