--- a/src/pages/admin/new-post.astro
+++ b/src/pages/admin/new-post.astro
@@ -3,6 +3,7 @@
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
+    <meta name="robots" content="noindex, nofollow">
     <title>📝 Viết bài mới</title>
     <style>
       body {
